# witch-cooking

./: .editorconfig  Cargo.toml  LICENSE  Makefile  README.md  rustfmt.toml
doc/undergraduate-thesis/: .editorconfig  .gitignore  Makefile  aliases.tex  glossary.bib  main.tex  references.bib
doc/undergraduate-thesis/defense-seminar/: .gitignore  Makefile  main.tex
doc/undergraduate-thesis/defense-seminar/_minted-main/: 3C8F47A9C0340C83C6183925F59A5468AA15CF4BA75075E8168D3671BF7EB064.pygtex
doc/undergraduate-thesis/defense-seminar/demo/: demo  indent-bang.sh  indent-offset-bang.sh  node-sync.sh  space-bang.sh
src/: cli.rs  editor.rs  err.rs  main.rs  query_testing.rs
src/node_utils/: jumper.rs  mod.rs  walker.rs
src/predicates/: debugger.rs  err.rs  indent.rs  indent_offset.rs  mod.rs  predicate.rs  space.rs  space_all.rs  space_rec.rs  spacer.rs
src/settings/: cpl.rs  err.rs  ignored.rs  indent_rule.rs  indent_style.rs  mod.rs  setting.rs
src/settings/parser/: cpl.rs  ignored.rs  indent_rule.rs  indent_style.rs  mod.rs
src/settings/parsers/: cpl.rs  ignored.rs  indent_rule.rs  indent_style.rs  mod.rs
