[package]
name = "witch-cooking"
version = "0.0.0"
edition = "2021"
description = """\
  Experimental multilingual code formatter based on Tree-Sitter's query.\
"""

[dependencies]
atty = "0.2"
clap = {version = "4.0", features = ["derive"]}
detect-lang = "0.1"
env_logger = "0.9"
error-stack = "0.1"
fnv = "1.0"
thiserror = "1.0"
tree-sitter = "0.20"
tree-sitter-bash = {version = "0.20.3", optional = true}
tree-sitter-c = {version = "0.20.6", optional = true}
tree-sitter-cpp = {version = "0.20.3", optional = true}
tree-sitter-go = {version = "0.20.0", optional = true}
tree-sitter-html = {version = "0.19.0", optional = true}
tree-sitter-java = {version = "0.20.2", optional = true}
tree-sitter-javascript = {version = "0.20.1", optional = true}
tree-sitter-python = {version = "0.20.4", optional = true}
tree-sitter-rust = {version = "0.20", optional = true}
tree-sitter-toml = {version = "0.20.0", optional = true}

[dependencies.log]
version = "0.4"
features = ["max_level_trace", "release_max_level_info"]

[dependencies.ropey]
version = "1.5"
default-features = false
features = ["simd"]

[dev-dependencies]
tree-sitter-rust = "0.20"

[features]
all = [
  "bash",
  "c",
  "cpp",
  "go",
  "html",
  "java",
  "javascript",
  "python",
  "rust",
  "toml",
]
default = ["rust"]
bash = ["tree-sitter-bash"]
c = ["tree-sitter-c"]
cpp = ["tree-sitter-cpp"]
go = ["tree-sitter-go"]
html = ["tree-sitter-html"]
java = ["tree-sitter-java"]
javascript = ["tree-sitter-javascript"]
python = ["tree-sitter-python"]
rust = ["tree-sitter-rust"]
toml = ["tree-sitter-toml"]

[[bin]]
name = "cook"
path = "src/main.rs"